--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,18 @@
-asgiref==3.8.1
-bleach==6.2.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-cryptography==44.0.2
-defusedxml==0.7.1
-dj-database-url==2.3.0
-Django==5.1.6
-django-allauth==0.57.2
-django-heroku==0.3.1
-django-summernote==0.8.20.0
+asgiref==3.9.1
+certifi==2025.7.14
+charset-normalizer==3.4.2
+dj-database-url==3.0.1
+dj-rest-auth==7.0.1
+Django==5.2.4
+django-allauth==65.10.0
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
 gunicorn==23.0.0
 idna==3.10
-oauthlib==3.2.2
-packaging==24.2
-pillow==11.1.0
-psycopg2==2.9.10
+packaging==25.0
 psycopg2-binary==2.9.10
-pycparser==2.22
-PyJWT==2.10.1
-python3-openid==3.2.0
-pytz==2024.2
-requests==2.32.3
-requests-oauthlib==2.0.0
+requests==2.32.4
 sqlparse==0.5.3
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-webencodings==0.5.1
+tzdata==2025.2
+urllib3==2.5.0
 whitenoise==6.9.0
-djangorestframework
-django-cors-headers
-dj-rest-auth
